Programme detail - overview tab yaml and programme detail title fix

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.yaml
@@ -23,3 +23,9 @@ context:
     get_programme_details_time_suffix_display: 'year programme'
     programme_details_duration: 'Full-time study'
     get_programme_details_duration_display: 'Full time study'
+  programme_page_global_fields:
+    key_details_programme_details_title: Programme details
+    key_details_next_open_day_title: Next open days
+    key_details_book_or_view_all_open_days_link_title: Book or view all open days
+    key_details_application_deadline_title: Application deadline
+    key_details_career_opportunities_title: Career opportunities
