--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ redis==2.10.6
 wagtail-orderable==1.0.2
 lxml==4.5.0
 django-phonenumber-field[phonenumbers]==4.0.0
+wagtail_redirect_importer==1.0.2
