--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.yaml
@@ -26,12 +26,24 @@ context:
             - { title: Creative industries }
         - tab_title: Subject
           children:
+            - { title: 3D modelling & visualisation }
+            - { title: Art & curating }
+            - { title: Creative industries }
             - { title: Critical practice }
             - { title: Culture & communication }
             - { title: Digital futures }
             - { title: Emerging technologies }
             - { title: Engineering design }
             - { title: Future cities }
+            - { title: Healthcare, ageing, wellbeing }
+            - { title: Inclusive design }
+            - { title: Intelligent mobility }
+            - { title: Manufacturing future }
+            - { title: New materials }
+            - { title: Risk, resilience, security and infrastructure }
+            - { title: Robotics & AI }
+            - { title: Service & UX design }
+            - { title: Sustainable society }
         - tab_title: Theme
           children:
             - { title: Digital futures }
