--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.yaml
@@ -14,99 +14,6 @@ context:
     feature_meta_text: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
     feature_meta_link: '#'
     related_courses_title: Programmes
-    related_courses:
-      - item:
-        title: Programmes for RCA students & alumni
-        related_items:
-          - item:
-            title: Design Thinking & Innovation
-            degree_level: Executive Education
-            programme_description_subtitle: Transform your Customer Experience.
-            img: http://placehold.it/300x270/fff/000
-          - item:
-            title: Service Design Masterclass
-            degree_level: Executive Education
-            programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
-            img: http://placehold.it/300x270/ff5d1c/fff
-          - item:
-            title: Creative Leadership
-            degree_level: Executive Education
-            programme_description_subtitle: Turning innovation into successful real-world businesses.
-            img: http://placehold.it/300x270
-      - item:
-        title: Programmes for individuals & companies
-        related_items:
-          - item:
-            title: Design Thinking & Innovation
-            degree_level: Executive Education
-            programme_description_subtitle: Transform your Customer Experience.
-            img: http://placehold.it/300x270/fff/000
-          - item:
-            title: Service Design Masterclass
-            degree_level: Executive Education
-            programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
-            img: http://placehold.it/300x270/ff5d1c/fff
-          - item:
-            title: Creative Leadership
-            degree_level: Executive Education
-            programme_description_subtitle: Turning innovation into successful real-world businesses.
-            img: http://placehold.it/300x270
-    stats_block:
-      title: Lorem ipsum dolor sit
-      default_notch_override: true
-      link: '#'
-      action: See all Outcomes
-      statistics:
-        - stat:
-          value:
-            after: '%'
-            number: 70
-            summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper accumsan urna.
-        - stat:
-          value:
-            after: '%'
-            number: 33
-            meta: Nationalities
-            summary: 1 in 3 of our graduates are business owners or independent professionals
-        - stat:
-          value:
-            number: 76
-            meta: Nationalities
-            summary: Our students come from all corners of the globe.
-        - stat:
-          value:
-            after: st
-            number: 1
-            summary: We're the top rated art & design university in the world.
-        - stat:
-          value:
-            number: 100
-            meta: Lorem Ipsum
-            summary: Our students come from all corners of the globe.
-    startups:
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-    bottom_feature_image: true
-    bottom_feature_heading: Angel Club at the RCA
-    bottom_feature_meta_heading: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id fermentum mi.
-    bottom_feature_meta_text: Aenean nec cursus ipsum. Pellentesque sodales, lectus a placerat eleifend, purus quam malesuada augue
-    bottom_feature_meta_link: '#'
     news:
       - item:
         meta: 'News'
@@ -131,3 +38,112 @@ context:
         person: false
     contact: true
     contact_image: true
+    highlights_link_text: Enterprise highlights
+    highlights_link_url: '#'
+    page_list_title: Programmes
+  page_list:
+    - item:
+      title: Programmes for RCA students & alumni
+      link:
+        url: '#'
+        title: View all executive education courses
+      related_items:
+        - item:
+          title: Design Thinking & Innovation
+          degree_level: Executive Education
+          programme_description_subtitle: Transform your Customer Experience.
+          img: http://placehold.it/300x270/fff/000
+        - item:
+          title: Service Design Masterclass
+          degree_level: Executive Education
+          programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
+          img: http://placehold.it/300x270/ff5d1c/fff
+        - item:
+          title: Creative Leadership
+          degree_level: Executive Education
+          programme_description_subtitle: Turning innovation into successful real-world businesses.
+          img: http://placehold.it/300x270
+    - item:
+      title: Programmes for individuals & companies
+      link:
+        url: '#'
+        title: View all executive education courses
+      related_items:
+        - item:
+          title: Design Thinking & Innovation
+          degree_level: Executive Education
+          programme_description_subtitle: Transform your Customer Experience.
+          img: http://placehold.it/300x270/fff/000
+        - item:
+          title: Service Design Masterclass
+          degree_level: Executive Education
+          programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
+          img: http://placehold.it/300x270/ff5d1c/fff
+        - item:
+          title: Creative Leadership
+          degree_level: Executive Education
+          programme_description_subtitle: Turning innovation into successful real-world businesses.
+          img: http://placehold.it/300x270
+  stats_block:
+    title: Lorem ipsum dolor sit
+    default_notch_override: true
+    link_url: '#'
+    link_text: See all Outcomes
+    statistics:
+      - stat:
+        value:
+          after: '%'
+          number: 70
+          summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper accumsan urna.
+      - stat:
+        value:
+          after: '%'
+          number: 33
+          meta: Nationalities
+          summary: 1 in 3 of our graduates are business owners or independent professionals
+      - stat:
+        value:
+          number: 76
+          meta: Nationalities
+          summary: Our students come from all corners of the globe.
+      - stat:
+        value:
+          after: st
+          number: 1
+          summary: We're the top rated art & design university in the world.
+      - stat:
+        value:
+          number: 100
+          meta: Lorem Ipsum
+          summary: Our students come from all corners of the globe.
+  related_pages_highlights:
+    - slide:
+      meta: 'Startups'
+      title: 'Lorem ipsum dolor sit'
+      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      image: true
+      link: '#'
+    - slide:
+      meta: 'Startups'
+      title: 'Lorem ipsum dolor sit'
+      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      image: true
+      link: '#'
+    - slide:
+      meta: 'Startups'
+      title: 'Lorem ipsum dolor sit'
+      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      image: true
+      link: '#'
+  featured_image_secondary:
+    title: Angel Club at the RCA
+    subtitle: Join a thriving community of more than 250 MPhil and PhD students
+    description: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
+    get_link_text: Read more
+    get_link_url: '#'
+  featured_image:
+    title: Our programmes
+    subtitle: Join a thriving community of more than 250 MPhil and PhD students
+    description: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
+    get_link_text: Read more
+    get_link_url: '#'
