--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.yaml
@@ -9,50 +9,60 @@ context:
       title: Filter by
       items:
         - tab_title: School or Centre
+          filter_name: school_or_centre
           children:
-            - { title: 3D modelling & visualisation, id: '1-1' }
-            - { title: Art & curating, id: '1-2' }
-            - { title: Creative industries, id: '1-3' }
-            - { title: Critical practice, id: '1-4' }
-            - { title: Culture & communication, id: '1-5' }
-            - { title: Digital futures, id: '1-6' }
-            - { title: Emerging technologies, id: '1-7' }
-            - { title: Engineering design, id: '1-8' }
-            - { title: Future cities, id: '1-9' }
+            - { title: 3D modelling & visualisation, id: '1-1', active: true }
+            - { title: Art & curating, id: '1-2', active: false }
+            - { title: Creative industries, id: '1-3', active: false }
+            - { title: Critical practice, id: '1-4', active: false }
+            - { title: Culture & communication, id: '1-5', active: false }
+            - { title: Digital futures, id: '1-6', active: false }
+            - { title: Emerging technologies, id: '1-7', active: false }
+            - { title: Engineering design, id: '1-8', active: false }
+            - { title: Future cities, id: '1-9', active: true }
         - tab_title: Research type
+          filter_name: type
           children:
-            - { title: 3D modelling & visualisation, id: '2-1' }
-            - { title: Art & curating, id: '2-2' }
-            - { title: Creative industries, id: '2-3' }
+            - { title: 3D modelling & visualisation, id: '2-1', active: false }
+            - { title: Art & curating, id: '2-2', active: false }
+            - { title: Creative industries, id: '2-3', active: false }
         - tab_title: Subject
+          filter_name: subject
           children:
-            - { title: 3D modelling & visualisation, id: '3-1' }
-            - { title: Art & curating, id: '3-2' }
-            - { title: Creative industries, id: '3-3' }
-            - { title: Critical practice, id: '3-4' }
-            - { title: Culture & communication, id: '3-5' }
-            - { title: Digital futures, id: '3-6' }
-            - { title: Emerging technologies, id: '3-7' }
-            - { title: Engineering design, id: '3-8' }
-            - { title: Future cities, id: '3-9' }
-            - { title: Healthcare, ageing, wellbeing, id: '3-10' }
-            - { title: Inclusive design, id: '3-11' }
-            - { title: Intelligent mobility, id: '3-12' }
-            - { title: Manufacturing future, id: '3-13' }
-            - { title: New materials, id: '3-14' }
+            - { title: 3D modelling & visualisation, id: '3-1', active: false }
+            - { title: Art & curating, id: '3-2', active: false }
+            - { title: Creative industries, id: '3-3', active: false }
+            - { title: Critical practice, id: '3-4', active: false }
+            - { title: Culture & communication, id: '3-5', active: false }
+            - { title: Digital futures, id: '3-6', active: false }
+            - { title: Emerging technologies, id: '3-7', active: false }
+            - { title: Engineering design, id: '3-8', active: false }
+            - { title: Future cities, id: '3-9', active: false }
+            - {
+                title: Healthcare,
+                ageing,
+                wellbeing,
+                id: '3-10',
+                active: false,
+              }
+            - { title: Inclusive design, id: '3-11', active: false }
+            - { title: Intelligent mobility, id: '3-12', active: false }
+            - { title: Manufacturing future, id: '3-13', active: false }
+            - { title: New materials, id: '3-14', active: false }
             - {
                 title: Risk,
                 resilience,
                 security and infrastructure,
                 id: '3-15',
               }
-            - { title: Robotics & AI, id: '3-16' }
-            - { title: Service & UX design, id: '3-17' }
-            - { title: Sustainable society, id: '3-18' }
+            - { title: Robotics & AI, id: '3-16', active: false }
+            - { title: Service & UX design, id: '3-17', active: false }
+            - { title: Sustainable society, id: '3-18', active: false }
         - tab_title: Theme
+          filter_name: theme
           children:
-            - { title: Digital futures, id: '4-1' }
-            - { title: Emerging technologies, id: '4-2' }
+            - { title: Digital futures, id: '4-1', active: false }
+            - { title: Emerging technologies, id: '4-2', active: false }
     feature:
       sub_heading: School of Design
       meta_heading: Electronic Skin Nanopatches for Continuous Blood Pressure Monitoring
