--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.yaml
@@ -83,9 +83,9 @@ context:
           degree_level: Executive Education
           programme_description_subtitle: Turning innovation into successful real-world businesses.
           img: http://placehold.it/300x270
+  stats_block_default_notch_override: True
   stats_block:
     title: Lorem ipsum dolor sit
-    default_notch_override: true
     link_url: '#'
     link_text: See all Outcomes
     statistics:
