--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,8 @@ jobs:
       - run:
           name: deploy dev to heroku
           command: |
-            git push https://heroku:$HEROKU_TOKEN@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
+            echo "Deploying to Heroku. To see progress, go to: https://dashboard.heroku.com/apps/$HEROKU_APP_NAME_DEV/activity"
+            curl -sf -X POST -m 900 https://heroku-deploy.torchbox.com/$HEROKU_APP_NAME_DEV/$CIRCLE_SHA1?key=$DEPLOYMENT_KEY
   deploy_staging:
     docker:
       - image: buildpack-deps:trusty
@@ -78,7 +79,8 @@ jobs:
       - run:
           name: deploy staging to heroku
           command: |
-            git push https://heroku:$HEROKU_TOKEN@git.heroku.com/$HEROKU_APP_NAME_STAGING.git master
+            echo "Deploying to Heroku. To see progress, go to: https://dashboard.heroku.com/apps/$HEROKU_APP_NAME_STAGING/activity"
+            curl -sf -X POST -m 900 https://heroku-deploy.torchbox.com/$HEROKU_APP_NAME_STAGING/$CIRCLE_SHA1?key=$DEPLOYMENT_KEY
   deploy_production:
     docker:
       - image: buildpack-deps:trusty
@@ -87,7 +89,8 @@ jobs:
       - run:
           name: deploy master to heroku
           command: |
-            git push https://heroku:$HEROKU_TOKEN@git.heroku.com/$HEROKU_APP_NAME_PRODUCTION.git master
+            echo "Deploying to Heroku. To see progress, go to: https://dashboard.heroku.com/apps/$HEROKU_APP_NAME_PRODUCTION/activity"
+            curl -sf -X POST -m 900 https://heroku-deploy.torchbox.com/$HEROKU_APP_NAME_PRODUCTION/$CIRCLE_SHA1?key=$DEPLOYMENT_KEY
 
 workflows:
   version: 2
