Fixing guide yaml

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
@@ -16,10 +16,11 @@ context:
     body:
       - dummy
     last_published_at: !!timestamp '2020-05-13 2:00:00'
+    related_pages_title: Index Module
   anchor_nav:
     - { title: Introduction, link: '#introduction' }
-    - { title: Article 1, link: '#article-one' }
-    - { title: Article 2, link: '#article-two' }
+    - { title: Article one, link: '#article-one' }
+    - { title: Article two, link: '#article-two' }
     - { title: Staff, link: '#staff' }
     - { title: Index module, link: '#index-module' }
   related_pages:
