Update deploy image to use curl

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
             curl -sf -X POST -m 900 https://heroku-deploy.torchbox.com/$HEROKU_APP_NAME_DEV/$CIRCLE_SHA1?key=$DEPLOYMENT_KEY
   deploy_staging:
     docker:
-      - image: buildpack-deps:trusty
+      - image: buildpack-deps:trusty-curl
     steps:
       - checkout
       - run:
