--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_listing.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_listing.yaml
@@ -10,14 +10,30 @@ context:
           children:
             - { title: All schools, id: '1-1', active: true }
             - { title: College-wide, id: '1-2', active: false }
-            - { title: Computer Science Research Centre, id: '1-3', active: false }
-            - { title: Intelligent Mobility Design Centre, id: '1-4', active: false }
-            - { title: Materials Science Research Centre, id: '1-5', active: false }
+            - {
+                title: Computer Science Research Centre,
+                id: '1-3',
+                active: false,
+              }
+            - {
+                title: Intelligent Mobility Design Centre,
+                id: '1-4',
+                active: false,
+              }
+            - {
+                title: Materials Science Research Centre,
+                id: '1-5',
+                active: false,
+              }
             - { title: School of Architecture, id: '1-6', active: false }
             - { title: School of Arts & Humanities, id: '1-7', active: false }
             - { title: School of Communication, id: '1-8', active: false }
             - { title: School of Design, id: '1-9', active: true }
-            - { title: The Helen Hamlyn Centre for Design, id: '1-10', active: false }
+            - {
+                title: The Helen Hamlyn Centre for Design,
+                id: '1-10',
+                active: false,
+              }
         - tab_title: Directorates
           filter_name: directorates
           children:
@@ -31,15 +47,27 @@ context:
             - { title: Animation, id: '3-2', active: false }
             - { title: Architecture, id: '3-3', active: false }
             - { title: Architecture Research, id: '3-4', active: false }
-            - { title: Arts &amp; Humanities Research, id: '3-5', active: false }
+            - {
+                title: Arts &amp; Humanities Research,
+                id: '3-5',
+                active: false,
+              }
             - { title: Ceramics &amp; Glass, id: '3-6', active: false }
             - { title: City Design, id: '3-7', active: false }
-            - { title: Communication Art &amp; Design, id: '3-8', active: false }
+            - {
+                title: Communication Art &amp; Design,
+                id: '3-8',
+                active: false,
+              }
             - { title: Communication Research, id: '3-9', active: false }
             - { title: Computer Science MPhil/PhD, id: '3-10', active: false }
             - { title: Conservation, id: '3-11', active: false }
             - { title: Contemporary Art Practice, id: '3-12', active: false }
-            - { title: Critical &amp; Historical Studies, id: '3-13', active: false }
+            - {
+                title: Critical &amp; Historical Studies,
+                id: '3-13',
+                active: false,
+              }
             - { title: Curating Contemporary Art, id: '3-14', active: false }
             - { title: Design Interactions, id: '3-15', active: false }
             - { title: Design Products, id: '3-16', active: false }
@@ -50,20 +78,58 @@ context:
             - { title: Fashion, id: '3-21', active: false }
             - { title: Fashion Womenswear, id: '3-22', active: false }
             - { title: Global Innovation Design, id: '3-23', active: false }
-            - { title: Goldsmithing, Silversmithing, Metalwork & Jewellery, id: '3-24', active: false }
-            - { title: Graduate Diploma Art & Design, id: '3-25', active: false }
+            - {
+                title: Goldsmithing,
+                Silversmithing,
+                Metalwork & Jewellery,
+                id: '3-24',
+                active: false,
+              }
+            - {
+                title: Graduate Diploma Art & Design,
+                id: '3-25',
+                active: false,
+              }
             - { title: History of Design, id: '3-26', active: false }
-            - { title: Industrial Design Engineering, id: '3-27', active: false }
-            - { title: Information Experience Design, id: '3-28', active: false }
-            - { title: Innovation Design Engineering, id: '3-29', active: false }
+            - {
+                title: Industrial Design Engineering,
+                id: '3-27',
+                active: false,
+              }
+            - {
+                title: Information Experience Design,
+                id: '3-28',
+                active: false,
+              }
+            - {
+                title: Innovation Design Engineering,
+                id: '3-29',
+                active: false,
+              }
             - { title: Intelligent Mobility, id: '3-30', active: false }
-            - { title: Intelligent Mobility Design Centre PhD, id: '3-31', active: false }
+            - {
+                title: Intelligent Mobility Design Centre PhD,
+                id: '3-31',
+                active: false,
+              }
             - { title: Interior Design, id: '3-32', active: false }
             - { title: Jewellery & Metal, id: '3-33', active: false }
             - { title: MRes Healthcare &amp; Design, id: '3-34', active: false }
-            - { title: MRes RCA Architecture Pathway, id: '3-35', active: false }
-            - { title: MRes RCA Arts & Humanities Pathway, id: '3-36', active: false }
-            - { title: MRes RCA Communication Design Pathway, id: '3-37', active: false }
+            - {
+                title: MRes RCA Architecture Pathway,
+                id: '3-35',
+                active: false,
+              }
+            - {
+                title: MRes RCA Arts & Humanities Pathway,
+                id: '3-36',
+                active: false,
+              }
+            - {
+                title: MRes RCA Communication Design Pathway,
+                id: '3-37',
+                active: false,
+              }
             - { title: MRes RCA Design Pathway, id: '3-38', active: false }
             - { title: Painting, id: '3-39', active: false }
             - { title: Photography, id: '3-40', active: false }
@@ -94,4 +160,3 @@ context:
             - { title: Service & UX design, id: '3-54', active: false }
             - { title: Sustainable society, id: '3-55', active: false }
     results: true
-
