fix yaml pagination

--- a/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.yaml
@@ -1,8 +1,21 @@
 context:
   paginator_page:
     number: 1
-    has_previous: false
-    has_next: true
     next_page_number: 2
+  subpages:
+    has_previous: true
+    has_next: true
+    number: 1
     paginator:
       num_pages: 10
+      page_range:
+        - 1
+        - 2
+        - 3
+        - 4
+        - 5
+        - 6
+        - 7
+        - 8
+        - 9
+        - 10
