--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@babel/polyfill": "^7.7.0",
     "@glidejs/glide": "^3.4.1",
     "@reduxjs/toolkit": "^1.1.0",
+    "focus-trap": "^5.1.0",
     "headroom.js": "^0.9.4",
     "intersection-observer": "^0.7.0",
     "js-cookie": "^2.2.1",
